--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,44 +1,44 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9fcf7f">  <td>24/05/01 20:37:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestTimeClaming.ClaimTest()[pri:4, instance:com.EmpMonitor.test.TestTimeClaming@2f7c2f4f]">ClaimTest</td> 
+<tr bgcolor="a664f2">  <td>24/05/01 22:46:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestTimeClaming.ClaimTest()[pri:4, instance:com.EmpMonitor.test.TestTimeClaming@1b1473ab]">ClaimTest</td> 
   <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b770fc">  <td>24/05/01 20:37:32</td>   <td>-7602</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.CloseBrowser()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@1b1473ab]">&lt;&lt;CloseBrowser</td> 
+<tr bgcolor="b770fc">  <td>24/05/01 22:46:48</td>   <td>-7928</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.CloseBrowser()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@149e0f5d]">&lt;&lt;CloseBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b770fc">  <td>24/05/01 20:37:11</td>   <td>-28793</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.CloseBrowser()[pri:0, instance:com.EmpMonitor.test.EmpAttendance@149e0f5d]">&lt;&lt;CloseBrowser</td> 
+<tr bgcolor="b770fc">  <td>24/05/01 22:46:15</td>   <td>-40752</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.CloseBrowser()[pri:0, instance:com.EmpMonitor.test.EmpAttendance@4690b489]">&lt;&lt;CloseBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b770fc">  <td>24/05/01 20:36:49</td>   <td>-51486</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.CloseBrowser()[pri:0, instance:com.EmpMonitor.test.Register@4690b489]">&lt;&lt;CloseBrowser</td> 
+<tr bgcolor="b770fc">  <td>24/05/01 22:47:24</td>   <td>28085</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.CloseBrowser()[pri:0, instance:com.EmpMonitor.test.TestTimeClaming@1b1473ab]">&lt;&lt;CloseBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b770fc">  <td>24/05/01 20:38:04</td>   <td>23863</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.CloseBrowser()[pri:0, instance:com.EmpMonitor.test.TestTimeClaming@2f7c2f4f]">&lt;&lt;CloseBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="77e97b">  <td>24/05/01 20:36:56</td>   <td>-44104</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmpAttendance.EmployeAttendance()[pri:2, instance:com.EmpMonitor.test.EmpAttendance@149e0f5d]">EmployeAttendance</td> 
+<tr bgcolor="b770fc">  <td>24/05/01 22:48:09</td>   <td>73166</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.CloseBrowser()[pri:0, instance:com.EmpMonitor.test.Register@2f7c2f4f]">&lt;&lt;CloseBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="8ff1a8">  <td>24/05/01 22:45:34</td>   <td>-81297</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmpAttendance.EmployeAttendance()[pri:2, instance:com.EmpMonitor.test.EmpAttendance@4690b489]">EmployeAttendance</td> 
   <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b770fc">  <td>24/05/01 20:37:35</td>   <td>-4675</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.TestTimeClaming@2f7c2f4f]">&gt;&gt;Login</td> 
+<tr bgcolor="b770fc">  <td>24/05/01 22:46:50</td>   <td>-5293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.TestTimeClaming@1b1473ab]">&gt;&gt;Login</td> 
 <td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b770fc">  <td>24/05/01 20:36:52</td>   <td>-48515</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.EmpAttendance@149e0f5d]">&gt;&gt;Login</td> 
+<tr bgcolor="b770fc">  <td>24/05/01 22:45:31</td>   <td>-84901</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.EmpAttendance@4690b489]">&gt;&gt;Login</td> 
 <td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b770fc">  <td>24/05/01 20:36:22</td>   <td>-78417</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.Register@4690b489]">&gt;&gt;Login</td> 
+<tr bgcolor="b770fc">  <td>24/05/01 22:46:17</td>   <td>-38122</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@149e0f5d]">&gt;&gt;Login</td> 
 <td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b770fc">  <td>24/05/01 20:37:14</td>   <td>-25840</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@1b1473ab]">&gt;&gt;Login</td> 
+<tr bgcolor="b770fc">  <td>24/05/01 22:47:26</td>   <td>30696</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.Login()[pri:0, instance:com.EmpMonitor.test.Register@2f7c2f4f]">&gt;&gt;Login</td> 
 <td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b770fc">  <td>24/05/01 20:36:46</td>   <td>-54267</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.Register@4690b489]">&lt;&lt;Logout</td> 
+<tr bgcolor="b770fc">  <td>24/05/01 22:48:06</td>   <td>70811</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.Register@2f7c2f4f]">&lt;&lt;Logout</td> 
 <td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b770fc">  <td>24/05/01 20:37:54</td>   <td>13473</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.TestTimeClaming@2f7c2f4f]">&lt;&lt;Logout</td> 
+<tr bgcolor="b770fc">  <td>24/05/01 22:46:12</td>   <td>-43624</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.EmpAttendance@4690b489]">&lt;&lt;Logout</td> 
 <td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b770fc">  <td>24/05/01 20:37:30</td>   <td>-9735</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@1b1473ab]">&lt;&lt;Logout</td> 
+<tr bgcolor="b770fc">  <td>24/05/01 22:46:45</td>   <td>-10507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@149e0f5d]">&lt;&lt;Logout</td> 
 <td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b770fc">  <td>24/05/01 20:37:09</td>   <td>-31078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.EmpAttendance@149e0f5d]">&lt;&lt;Logout</td> 
+<tr bgcolor="b770fc">  <td>24/05/01 22:47:21</td>   <td>25332</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePropCls.Logout()[pri:0, instance:com.EmpMonitor.test.TestTimeClaming@1b1473ab]">&lt;&lt;Logout</td> 
 <td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b770fc">  <td>24/05/01 20:37:12</td>   <td>-28493</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.OpenBrowser()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@1b1473ab]">&gt;&gt;OpenBrowser</td> 
+<tr bgcolor="b770fc">  <td>24/05/01 22:46:48</td>   <td>-7712</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.OpenBrowser()[pri:0, instance:com.EmpMonitor.test.TestTimeClaming@1b1473ab]">&gt;&gt;OpenBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b770fc">  <td>24/05/01 20:37:33</td>   <td>-7350</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.OpenBrowser()[pri:0, instance:com.EmpMonitor.test.TestTimeClaming@2f7c2f4f]">&gt;&gt;OpenBrowser</td> 
+<tr bgcolor="b770fc">  <td>24/05/01 22:46:15</td>   <td>-40499</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.OpenBrowser()[pri:0, instance:com.EmpMonitor.test.TestTimesheet@149e0f5d]">&gt;&gt;OpenBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b770fc">  <td>24/05/01 20:36:49</td>   <td>-51165</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.OpenBrowser()[pri:0, instance:com.EmpMonitor.test.EmpAttendance@149e0f5d]">&gt;&gt;OpenBrowser</td> 
+<tr bgcolor="b770fc">  <td>24/05/01 22:47:24</td>   <td>28302</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.OpenBrowser()[pri:0, instance:com.EmpMonitor.test.Register@2f7c2f4f]">&gt;&gt;OpenBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="b770fc">  <td>24/05/01 20:36:18</td>   <td>-81834</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.OpenBrowser()[pri:0, instance:com.EmpMonitor.test.Register@4690b489]">&gt;&gt;OpenBrowser</td> 
+<tr bgcolor="b770fc">  <td>24/05/01 22:45:26</td>   <td>-89189</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePropCls.OpenBrowser()[pri:0, instance:com.EmpMonitor.test.EmpAttendance@4690b489]">&gt;&gt;OpenBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="8ff1a8">  <td>24/05/01 20:36:26</td>   <td>-73924</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.RegisterName()[pri:1, instance:com.EmpMonitor.test.Register@4690b489]">RegisterName</td> 
+<tr bgcolor="9fcf7f">  <td>24/05/01 22:47:30</td>   <td>34220</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.RegisterName()[pri:1, instance:com.EmpMonitor.test.Register@2f7c2f4f]">RegisterName</td> 
   <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="a664f2">  <td>24/05/01 20:37:19</td>   <td>-21311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestTimesheet.timesheet()[pri:3, instance:com.EmpMonitor.test.TestTimesheet@1b1473ab]">timesheet</td> 
+<tr bgcolor="77e97b">  <td>24/05/01 22:46:21</td>   <td>-34074</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestTimesheet.timesheet()[pri:3, instance:com.EmpMonitor.test.TestTimesheet@149e0f5d]">timesheet</td> 
   <td>main@498931366</td>   <td></td> </tr>
 </table>
