--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,14 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">19,708</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">162,638</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.EmpMonitor.test.TestTimeClaming</td><td><a href="#m0">ClaimTest</a></td><td rowspan="1">1714577464497</td><td rowspan="1">8818</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.EmpMonitor.test.EmpAttendance</td><td><a href="#m0">EmployeAttendance</a></td><td rowspan="1">1714583734720</td><td rowspan="1">37635</td></tr><tr class="passedodd"><td rowspan="1">com.EmpMonitor.test.Register</td><td><a href="#m1">RegisterName</a></td><td rowspan="1">1714583850237</td><td rowspan="1">36588</td></tr><tr class="passedeven"><td rowspan="1">com.EmpMonitor.test.TestTimeClaming</td><td><a href="#m2">ClaimTest</a></td><td rowspan="1">1714583816017</td><td rowspan="1">25330</td></tr><tr class="passedodd"><td rowspan="1">com.EmpMonitor.test.TestTimesheet</td><td><a href="#m3">timesheet</a></td><td rowspan="1">1714583781943</td><td rowspan="1">23565</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.EmpMonitor.test.TestTimeClaming#ClaimTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">com.EmpMonitor.test.EmpAttendance#EmployeAttendance</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.EmpMonitor.test.Register#RegisterName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.EmpMonitor.test.TestTimeClaming#ClaimTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.EmpMonitor.test.TestTimesheet#timesheet</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
