--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,75 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">37,616</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">0</td><td class="num attn">5</td><td class="num">0</td><td class="num">0</td><td class="num">192</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.EmpMonitor.test.TestReports</td><td><a href="#m0">ReportDownload</a></td><td rowspan="1">1714819113101</td><td rowspan="1">26513</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">com.EmpMonitor.test.EmpAttendance</td><td><a href="#m0">OpenBrowser</a></td><td rowspan="1">1714820800522</td><td rowspan="1">-1714820800522</td></tr><tr class="failedodd"><td rowspan="1">com.EmpMonitor.test.Register</td><td><a href="#m1">OpenBrowser</a></td><td rowspan="1">1714820800639</td><td rowspan="1">-1714820800639</td></tr><tr class="failedeven"><td rowspan="1">com.EmpMonitor.test.TestReports</td><td><a href="#m2">OpenBrowser</a></td><td rowspan="1">1714820800655</td><td rowspan="1">-1714820800655</td></tr><tr class="failedodd"><td rowspan="1">com.EmpMonitor.test.TestTimeClaming</td><td><a href="#m3">OpenBrowser</a></td><td rowspan="1">1714820800621</td><td rowspan="1">-1714820800621</td></tr><tr class="failedeven"><td rowspan="1">com.EmpMonitor.test.TestTimesheet</td><td><a href="#m4">OpenBrowser</a></td><td rowspan="1">1714820800602</td><td rowspan="1">-1714820800602</td></tr><tr><th colspan="4">Test &#8212; skipped (configuration methods)</th></tr><tr class="skippedeven"><td rowspan="3">com.EmpMonitor.test.EmpAttendance</td><td><a href="#m5">CloseBrowser</a></td><td rowspan="1">1714820800597</td><td rowspan="1">-1714820800597</td></tr><tr class="skippedeven"><td><a href="#m6">Login</a></td><td rowspan="1">1714820800577</td><td rowspan="1">-1714820800577</td></tr><tr class="skippedeven"><td><a href="#m7">Logout</a></td><td rowspan="1">1714820800593</td><td rowspan="1">-1714820800593</td></tr><tr class="skippedodd"><td rowspan="3">com.EmpMonitor.test.Register</td><td><a href="#m8">CloseBrowser</a></td><td rowspan="1">1714820800653</td><td rowspan="1">-1714820800653</td></tr><tr class="skippedodd"><td><a href="#m9">Login</a></td><td rowspan="1">1714820800642</td><td rowspan="1">-1714820800642</td></tr><tr class="skippedodd"><td><a href="#m10">Logout</a></td><td rowspan="1">1714820800652</td><td rowspan="1">-1714820800652</td></tr><tr class="skippedeven"><td rowspan="3">com.EmpMonitor.test.TestReports</td><td><a href="#m11">CloseBrowser</a></td><td rowspan="1">1714820800669</td><td rowspan="1">-1714820800669</td></tr><tr class="skippedeven"><td><a href="#m12">Login</a></td><td rowspan="1">1714820800658</td><td rowspan="1">-1714820800658</td></tr><tr class="skippedeven"><td><a href="#m13">Logout</a></td><td rowspan="1">1714820800668</td><td rowspan="1">-1714820800668</td></tr><tr class="skippedodd"><td rowspan="3">com.EmpMonitor.test.TestTimeClaming</td><td><a href="#m14">CloseBrowser</a></td><td rowspan="1">1714820800637</td><td rowspan="1">-1714820800637</td></tr><tr class="skippedodd"><td><a href="#m15">Login</a></td><td rowspan="1">1714820800625</td><td rowspan="1">-1714820800625</td></tr><tr class="skippedodd"><td><a href="#m16">Logout</a></td><td rowspan="1">1714820800636</td><td rowspan="1">-1714820800636</td></tr><tr class="skippedeven"><td rowspan="3">com.EmpMonitor.test.TestTimesheet</td><td><a href="#m17">CloseBrowser</a></td><td rowspan="1">1714820800618</td><td rowspan="1">-1714820800618</td></tr><tr class="skippedeven"><td><a href="#m18">Login</a></td><td rowspan="1">1714820800608</td><td rowspan="1">-1714820800608</td></tr><tr class="skippedeven"><td><a href="#m19">Logout</a></td><td rowspan="1">1714820800615</td><td rowspan="1">-1714820800615</td></tr><tr><th colspan="4">Test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">com.EmpMonitor.test.EmpAttendance</td><td><a href="#m20">EmployeAttendance</a></td><td rowspan="1">1714820800585</td><td rowspan="1">0</td></tr><tr class="skippedodd"><td rowspan="1">com.EmpMonitor.test.Register</td><td><a href="#m21">RegisterName</a></td><td rowspan="1">1714820800646</td><td rowspan="1">0</td></tr><tr class="skippedeven"><td rowspan="1">com.EmpMonitor.test.TestReports</td><td><a href="#m22">ReportDownload</a></td><td rowspan="1">1714820800664</td><td rowspan="1">0</td></tr><tr class="skippedodd"><td rowspan="1">com.EmpMonitor.test.TestTimeClaming</td><td><a href="#m23">ClaimTest</a></td><td rowspan="1">1714820800626</td><td rowspan="1">0</td></tr><tr class="skippedeven"><td rowspan="1">com.EmpMonitor.test.TestTimesheet</td><td><a href="#m24">timesheet</a></td><td rowspan="1">1714820800610</td><td rowspan="1">0</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.EmpMonitor.test.TestReports#ReportDownload</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">com.EmpMonitor.test.EmpAttendance#OpenBrowser</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.TestNGException: 
+Can inject only one of &lt;ITestContext, XmlTest&gt; into a @BeforeClass annotated OpenBrowser.
+For more information on native dependency injection please refer to https://testng.org/doc/documentation-main.html#native-dependency-injection
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 22 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.EmpMonitor.test.Register#OpenBrowser</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.TestNGException: 
+Can inject only one of &lt;ITestContext, XmlTest&gt; into a @BeforeClass annotated OpenBrowser.
+For more information on native dependency injection please refer to https://testng.org/doc/documentation-main.html#native-dependency-injection
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 22 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.EmpMonitor.test.TestReports#OpenBrowser</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.TestNGException: 
+Can inject only one of &lt;ITestContext, XmlTest&gt; into a @BeforeClass annotated OpenBrowser.
+For more information on native dependency injection please refer to https://testng.org/doc/documentation-main.html#native-dependency-injection
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 22 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.EmpMonitor.test.TestTimeClaming#OpenBrowser</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.TestNGException: 
+Can inject only one of &lt;ITestContext, XmlTest&gt; into a @BeforeClass annotated OpenBrowser.
+For more information on native dependency injection please refer to https://testng.org/doc/documentation-main.html#native-dependency-injection
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 22 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.EmpMonitor.test.TestTimesheet#OpenBrowser</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.TestNGException: 
+Can inject only one of &lt;ITestContext, XmlTest&gt; into a @BeforeClass annotated OpenBrowser.
+For more information on native dependency injection please refer to https://testng.org/doc/documentation-main.html#native-dependency-injection
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 22 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.EmpMonitor.test.EmpAttendance#CloseBrowser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">com.EmpMonitor.test.EmpAttendance#Login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">com.EmpMonitor.test.EmpAttendance#Logout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">com.EmpMonitor.test.Register#CloseBrowser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m9">com.EmpMonitor.test.Register#Login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m10">com.EmpMonitor.test.Register#Logout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m11">com.EmpMonitor.test.TestReports#CloseBrowser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m12">com.EmpMonitor.test.TestReports#Login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m13">com.EmpMonitor.test.TestReports#Logout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m14">com.EmpMonitor.test.TestTimeClaming#CloseBrowser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m15">com.EmpMonitor.test.TestTimeClaming#Login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m16">com.EmpMonitor.test.TestTimeClaming#Logout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m17">com.EmpMonitor.test.TestTimesheet#CloseBrowser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m18">com.EmpMonitor.test.TestTimesheet#Login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m19">com.EmpMonitor.test.TestTimesheet#Logout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m20">com.EmpMonitor.test.EmpAttendance#EmployeAttendance</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.TestNGException: 
+Can inject only one of &lt;ITestContext, XmlTest&gt; into a @BeforeClass annotated OpenBrowser.
+For more information on native dependency injection please refer to https://testng.org/doc/documentation-main.html#native-dependency-injection
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 22 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m21">com.EmpMonitor.test.Register#RegisterName</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.TestNGException: 
+Can inject only one of &lt;ITestContext, XmlTest&gt; into a @BeforeClass annotated OpenBrowser.
+For more information on native dependency injection please refer to https://testng.org/doc/documentation-main.html#native-dependency-injection
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 22 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m22">com.EmpMonitor.test.TestReports#ReportDownload</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.TestNGException: 
+Can inject only one of &lt;ITestContext, XmlTest&gt; into a @BeforeClass annotated OpenBrowser.
+For more information on native dependency injection please refer to https://testng.org/doc/documentation-main.html#native-dependency-injection
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 22 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m23">com.EmpMonitor.test.TestTimeClaming#ClaimTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.TestNGException: 
+Can inject only one of &lt;ITestContext, XmlTest&gt; into a @BeforeClass annotated OpenBrowser.
+For more information on native dependency injection please refer to https://testng.org/doc/documentation-main.html#native-dependency-injection
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 22 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m24">com.EmpMonitor.test.TestTimesheet#timesheet</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.TestNGException: 
+Can inject only one of &lt;ITestContext, XmlTest&gt; into a @BeforeClass annotated OpenBrowser.
+For more information on native dependency injection please refer to https://testng.org/doc/documentation-main.html#native-dependency-injection
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 22 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
